fix ie10 cut off input text

--- a/web/css/timeline.css
+++ b/web/css/timeline.css
@@ -201,6 +201,7 @@ g.plot rect.data-bar-invisible {
   background: transparent;
   border: 0;
   font-family: 'Roboto Mono', monospace;
+  line-height: 1.2em;
   vertical-align: middle;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
